--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
             max-width: 600px;
             margin: auto;
             padding: 20px;
-            background-color: #ffffff;
+            background: #ffffff url('https://www.toptal.com/designers/subtlepatterns/patterns/paper-fibers.png') repeat;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .logo {
-            width: 100px;
-            margin-bottom: 20px;
+            width: 150px;
+            height: 150px;
+            margin: 20px auto;
+            border-radius: 50%;
+            display: block;
+            object-fit: cover;
         }
         .button {
             background-color: #ff6600;
@@ -59,15 +63,16 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://i.imgur.com/your-logo.png" alt="Nerdscape" class="logo">
+        <img src="https://i.imgur.com/NEXfkrl.png" alt="Nerdscape" class="logo">
         <h1>Antes, um cuponzinho maroto de R$ 50,00 pra você aproveitar a loja mais linda do Brasil!</h1>
         <p>1 - Copie seu cupom pra colar na hora da compra:</p>
         <div class="cupom" id="cupom">ESTELAR50</div>
         <button class="button" onclick="copiarCupom()">Copiar Cupom</button>
         <p>2 - Agora, é só correr pro abraço:</p>
-        <a href="https://nerdscape.lojavirtualnuvem.com.br/" target="_blank">
-            <button class="button">Ir para o Site Nerdscape</button>
+        <a href="https://nerdscape.lojavirtualnuvem.com.br/estelar/" target="_blank">
+            <button class="button">Ir para o Site Nerd Scape</button>
         </a>
     </div>
 </body>
 </html>
+
